Closed Bug 1643212 Opened 6 years ago Closed 6 years ago

Items behind the Fenix dynamic toolbar cannot be clicked even when made visible by scrolling

Categories

(Core :: Panning and Zooming, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox77 --- unaffected
firefox78 --- verified
firefox79 --- verified

People

(Reporter: ekager, Assigned: botond)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Originally filed as https://github.com/mozilla-mobile/fenix/issues/11189

Steps to reproduce

  1. Go to https://staktrace.github.io/moz-pages/bug/fenix-11189.html
  2. Scroll down to reveal the button
  3. Click on button

Expected behavior

JS alert shows text "success"

Actual behavior

Button never gets clicked

Device information

  • Android device: Sony Xperia XZ1C, Android 9
  • Fenix version: Nightly 200602 06:01 (Build #2015743859) 44.0.20200531130125, 2ac91e358 GV: 78.0a1-20200529095426 AS: 0.59.0
Flags: needinfo?(botond)

Second STR from a dupe (I think) https://github.com/mozilla-mobile/fenix/issues/10720

Steps to reproduce

  1. Go to https://m.youtube.com/watch?v=nJ7zozOm8lo
  2. Scroll down
  3. Tap on the comment section at the bottom

Expected behavior

The comment section is opening

Actual behavior

The comment section doesn't open.

Device information

  • Android device: Pixel 2, Android 10
  • Fenix version: Build 21380606 GeckoView 78.0a1-20200514094044

See the details in https://github.com/webcompat/web-bugs/issues/52915

Some note:

  • Activating the hit testing to select the element in the inspector has no effect for this specific section.
  • Adding a margin-bottom no less than 16px fixes the issue.
  • It looks like the touch hit area is too close from the url bar and is not taken into account.
Assignee: nobody → botond
Severity: -- → S2
Flags: needinfo?(botond)
Priority: -- → P1

The problem is that in ScrollFrameHelper::BuildDisplayList(), we intersect the dirty rect with a scroll port rect that, unlike the one used for clipping below, is not expanded to account for the dynamic toolbar height.

The reason this was regressed by bug 1556556 is that this intersection is conditional on us not using the ignoreRootScrollFrame hack, and prior to bug 1556556 we were using that hack.

Set release status flags based on info from the regressing bug 1556556

See Also: → 1642240
Blocks: 1643512
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/14631f805e91 Use the expanded scroll port to constrain the dirty rect in ScrollFrameHelper::BuildDisplayList(). r=tnikkel
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

The patch landed in nightly and beta is affected.
:botond, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(botond)

Comment on attachment 9154083 [details]
Bug 1643212 - Use the expanded scroll port to constrain the dirty rect in ScrollFrameHelper::BuildDisplayList(). r=tnikkel

Beta/Release Uplift Approval Request

  • User impact if declined: Fenix users are unable to interact with some site elements at the bottom of the screen that were behind the dynamic toolbar, and are revealed by the dynamic toolbar hiding.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small change, specific to dynamic toolbar configurations
  • String changes made/needed: none
Flags: needinfo?(botond)
Attachment #9154083 - Flags: approval-mozilla-beta?

Comment on attachment 9154083 [details]
Bug 1643212 - Use the expanded scroll port to constrain the dirty rect in ScrollFrameHelper::BuildDisplayList(). r=tnikkel

approved for 78.0b5

Attachment #9154083 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
See Also: 1642240

Verified as fixed on Firefox Preview Nightly 200610 (Build #21620604) Wednesday 6/10 using a OnePlus 6T (Android 9) and Huawei MediaPad M3 (Android 7.0).

Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: