Bug 1643212 - Use the expanded scroll port to constrain the dirty rect in ScrollFrameHelper::BuildDisplayList(). r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D78220